USE student_growth;

SET FOREIGN_KEY_CHECKS=0;

CREATE TABLE stage(id BIGINT PRIMARY KEY AUTO_INCREMENT,code VARCHAR(32) NOT NULL UNIQUE,name VARCHAR(64) NOT NULL,sort_order INT NOT NULL DEFAULT 0,enabled TINYINT NOT NULL DEFAULT 1,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3)) ENGINE=InnoDB;
CREATE TABLE grade(id BIGINT PRIMARY KEY AUTO_INCREMENT,stage_id BIGINT NOT NULL,code VARCHAR(32) NOT NULL UNIQUE,name VARCHAR(64) NOT NULL,sort_order INT NOT NULL DEFAULT 0,enabled TINYINT NOT NULL DEFAULT 1,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),CONSTRAINT fk_grade_stage FOREIGN KEY(stage_id) REFERENCES stage(id),INDEX idx_grade_stage(stage_id,sort_order)) ENGINE=InnoDB;
CREATE TABLE subject(id BIGINT PRIMARY KEY AUTO_INCREMENT,code VARCHAR(32) NOT NULL UNIQUE,name VARCHAR(64) NOT NULL,sort_order INT NOT NULL DEFAULT 0,enabled TINYINT NOT NULL DEFAULT 1,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3)) ENGINE=InnoDB;
CREATE TABLE student(id BIGINT PRIMARY KEY AUTO_INCREMENT,student_code VARCHAR(32) NOT NULL UNIQUE,name VARCHAR(64) NOT NULL,birthday DATE NULL,school VARCHAR(128) NULL,current_stage_id BIGINT NULL,current_grade_id BIGINT NULL,remark TEXT NULL,deleted TINYINT NOT NULL DEFAULT 0,version INT NOT NULL DEFAULT 0,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),CONSTRAINT fk_student_stage FOREIGN KEY(current_stage_id) REFERENCES stage(id),CONSTRAINT fk_student_grade FOREIGN KEY(current_grade_id) REFERENCES grade(id),INDEX idx_student_deleted(deleted)) ENGINE=InnoDB;
CREATE TABLE academic_term(id BIGINT PRIMARY KEY AUTO_INCREMENT,student_id BIGINT NOT NULL,academic_year VARCHAR(16) NOT NULL,semester VARCHAR(16) NOT NULL,stage_id BIGINT NOT NULL,grade_id BIGINT NOT NULL,start_date DATE NULL,end_date DATE NULL,is_current TINYINT NOT NULL DEFAULT 0,deleted TINYINT NOT NULL DEFAULT 0,version INT NOT NULL DEFAULT 0,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),CONSTRAINT fk_term_student FOREIGN KEY(student_id) REFERENCES student(id),CONSTRAINT fk_term_stage FOREIGN KEY(stage_id) REFERENCES stage(id),CONSTRAINT fk_term_grade FOREIGN KEY(grade_id) REFERENCES grade(id),UNIQUE KEY uk_term(student_id,academic_year,semester,deleted)) ENGINE=InnoDB;
CREATE TABLE dict_type(id BIGINT PRIMARY KEY AUTO_INCREMENT,dict_code VARCHAR(64) NOT NULL UNIQUE,dict_name VARCHAR(128) NOT NULL,description VARCHAR(512),enabled TINYINT NOT NULL DEFAULT 1,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3)) ENGINE=InnoDB;
CREATE TABLE dict_item(id BIGINT PRIMARY KEY AUTO_INCREMENT,dict_type_id BIGINT NOT NULL,item_code VARCHAR(64) NOT NULL,item_label VARCHAR(128) NOT NULL,sort_order INT NOT NULL DEFAULT 0,enabled TINYINT NOT NULL DEFAULT 1,system_flag TINYINT NOT NULL DEFAULT 0,description VARCHAR(512),create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),CONSTRAINT fk_dict_item_type FOREIGN KEY(dict_type_id) REFERENCES dict_type(id),UNIQUE KEY uk_dict_item(dict_type_id,item_code)) ENGINE=InnoDB;
CREATE TABLE knowledge_node(id BIGINT PRIMARY KEY AUTO_INCREMENT,parent_id BIGINT NULL,node_code VARCHAR(64) NOT NULL UNIQUE,name VARCHAR(128) NOT NULL,node_type VARCHAR(32) NOT NULL,stage_id BIGINT NULL,grade_id BIGINT NULL,subject_id BIGINT NULL,level_no INT NOT NULL DEFAULT 1,sort_order INT NOT NULL DEFAULT 0,difficulty TINYINT NULL,description TEXT,keywords VARCHAR(512),enabled TINYINT NOT NULL DEFAULT 1,deleted TINYINT NOT NULL DEFAULT 0,version INT NOT NULL DEFAULT 1,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),CONSTRAINT fk_kn_parent FOREIGN KEY(parent_id) REFERENCES knowledge_node(id),CONSTRAINT fk_kn_stage FOREIGN KEY(stage_id) REFERENCES stage(id),CONSTRAINT fk_kn_grade FOREIGN KEY(grade_id) REFERENCES grade(id),CONSTRAINT fk_kn_subject FOREIGN KEY(subject_id) REFERENCES subject(id),CHECK(difficulty IS NULL OR difficulty BETWEEN 1 AND 5),INDEX idx_kn_parent(parent_id,sort_order,deleted),INDEX idx_kn_scope(stage_id,grade_id,subject_id,enabled,deleted)) ENGINE=InnoDB;
CREATE TABLE knowledge_relation(id BIGINT PRIMARY KEY AUTO_INCREMENT,source_knowledge_id BIGINT NOT NULL,target_knowledge_id BIGINT NOT NULL,relation_type VARCHAR(32) NOT NULL,weight DECIMAL(5,2) NOT NULL DEFAULT 1.00,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),CONSTRAINT fk_kr_source FOREIGN KEY(source_knowledge_id) REFERENCES knowledge_node(id),CONSTRAINT fk_kr_target FOREIGN KEY(target_knowledge_id) REFERENCES knowledge_node(id),CHECK(source_knowledge_id<>target_knowledge_id),UNIQUE KEY uk_kr(source_knowledge_id,target_knowledge_id,relation_type)) ENGINE=InnoDB;
CREATE TABLE exam(id BIGINT PRIMARY KEY AUTO_INCREMENT,student_id BIGINT NOT NULL,academic_term_id BIGINT NULL,exam_name VARCHAR(128) NOT NULL,exam_type VARCHAR(32) NOT NULL,exam_date DATE NOT NULL,total_score DECIMAL(8,2),total_full_score DECIMAL(8,2),remark TEXT,deleted TINYINT NOT NULL DEFAULT 0,version INT NOT NULL DEFAULT 0,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),CONSTRAINT fk_exam_student FOREIGN KEY(student_id) REFERENCES student(id),CONSTRAINT fk_exam_term FOREIGN KEY(academic_term_id) REFERENCES academic_term(id),INDEX idx_exam_student_date(student_id,exam_date,deleted)) ENGINE=InnoDB;
CREATE TABLE score_record(id BIGINT PRIMARY KEY AUTO_INCREMENT,exam_id BIGINT NOT NULL,student_id BIGINT NOT NULL,subject_id BIGINT NOT NULL,score DECIMAL(8,2) NOT NULL,full_score DECIMAL(8,2) NOT NULL,class_rank INT,grade_rank INT,class_size INT,grade_size INT,remark TEXT,deleted TINYINT NOT NULL DEFAULT 0,version INT NOT NULL DEFAULT 0,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),CONSTRAINT fk_sr_exam FOREIGN KEY(exam_id) REFERENCES exam(id),CONSTRAINT fk_sr_student FOREIGN KEY(student_id) REFERENCES student(id),CONSTRAINT fk_sr_subject FOREIGN KEY(subject_id) REFERENCES subject(id),CHECK(score>=0 AND full_score>0 AND score<=full_score),UNIQUE KEY uk_sr_exam_subject(exam_id,subject_id,deleted)) ENGINE=InnoDB;
CREATE TABLE score_knowledge(id BIGINT PRIMARY KEY AUTO_INCREMENT,score_record_id BIGINT NOT NULL,knowledge_id BIGINT NOT NULL,score DECIMAL(8,2),full_score DECIMAL(8,2),question_count INT,correct_count INT,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),CONSTRAINT fk_sk_score FOREIGN KEY(score_record_id) REFERENCES score_record(id),CONSTRAINT fk_sk_knowledge FOREIGN KEY(knowledge_id) REFERENCES knowledge_node(id),UNIQUE KEY uk_sk(score_record_id,knowledge_id)) ENGINE=InnoDB;
CREATE TABLE wrong_question(id BIGINT PRIMARY KEY AUTO_INCREMENT,student_id BIGINT NOT NULL,subject_id BIGINT NOT NULL,exam_id BIGINT NULL,source_type VARCHAR(32) NOT NULL,source_name VARCHAR(128),question_type VARCHAR(32),question_text LONGTEXT NOT NULL,student_answer LONGTEXT,correct_answer LONGTEXT,answer_source VARCHAR(32),analysis_text LONGTEXT,analysis_source VARCHAR(32),error_type VARCHAR(32),difficulty TINYINT,status VARCHAR(32) NOT NULL DEFAULT 'NEW',review_stage INT NOT NULL DEFAULT 0,review_count INT NOT NULL DEFAULT 0,last_review_time DATETIME(3),next_review_time DATETIME(3),occurred_date DATE,remark TEXT,deleted TINYINT NOT NULL DEFAULT 0,version INT NOT NULL DEFAULT 0,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),CONSTRAINT fk_wq_student FOREIGN KEY(student_id) REFERENCES student(id),CONSTRAINT fk_wq_subject FOREIGN KEY(subject_id) REFERENCES subject(id),CONSTRAINT fk_wq_exam FOREIGN KEY(exam_id) REFERENCES exam(id),CHECK(source_type IN('PRACTICE','EXAM')),CHECK(difficulty IS NULL OR difficulty BETWEEN 1 AND 5),CHECK(review_stage BETWEEN 0 AND 7),INDEX idx_wq_filter(student_id,subject_id,source_type,status,deleted),INDEX idx_wq_review(next_review_time,status,deleted)) ENGINE=InnoDB;
CREATE TABLE wrong_question_knowledge(wrong_question_id BIGINT NOT NULL,knowledge_id BIGINT NOT NULL,is_primary TINYINT NOT NULL DEFAULT 0,confidence DECIMAL(5,4),PRIMARY KEY(wrong_question_id,knowledge_id),CONSTRAINT fk_wqk_wq FOREIGN KEY(wrong_question_id) REFERENCES wrong_question(id),CONSTRAINT fk_wqk_kn FOREIGN KEY(knowledge_id) REFERENCES knowledge_node(id),CHECK(confidence IS NULL OR confidence BETWEEN 0 AND 1)) ENGINE=InnoDB;
CREATE TABLE wrong_review(id BIGINT PRIMARY KEY AUTO_INCREMENT,wrong_question_id BIGINT NOT NULL,review_time DATETIME(3) NOT NULL,result VARCHAR(16) NOT NULL,score DECIMAL(8,2),duration_seconds INT,student_answer LONGTEXT,remark TEXT,next_review_time DATETIME(3),idempotency_key VARCHAR(64),create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),CONSTRAINT fk_wr_wq FOREIGN KEY(wrong_question_id) REFERENCES wrong_question(id),CHECK(result IN('CORRECT','PARTIAL','WRONG','UNKNOWN')),UNIQUE KEY uk_wr_idempotency(idempotency_key)) ENGINE=InnoDB;
CREATE TABLE student_mastery(id BIGINT PRIMARY KEY AUTO_INCREMENT,student_id BIGINT NOT NULL,knowledge_id BIGINT NOT NULL,mastery_score DECIMAL(5,2) NOT NULL DEFAULT 0,correct_count INT NOT NULL DEFAULT 0,wrong_count INT NOT NULL DEFAULT 0,partial_count INT NOT NULL DEFAULT 0,review_count INT NOT NULL DEFAULT 0,continuous_correct_count INT NOT NULL DEFAULT 0,continuous_wrong_count INT NOT NULL DEFAULT 0,evidence_count INT NOT NULL DEFAULT 0,last_practice_time DATETIME(3),last_review_time DATETIME(3),next_review_time DATETIME(3),decay_base_time DATETIME(3),manual_locked TINYINT NOT NULL DEFAULT 0,version INT NOT NULL DEFAULT 0,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),CONSTRAINT fk_sm_student FOREIGN KEY(student_id) REFERENCES student(id),CONSTRAINT fk_sm_kn FOREIGN KEY(knowledge_id) REFERENCES knowledge_node(id),CHECK(mastery_score BETWEEN 0 AND 100),UNIQUE KEY uk_sm(student_id,knowledge_id),INDEX idx_sm_weak(student_id,mastery_score)) ENGINE=InnoDB;
CREATE TABLE mastery_history(id BIGINT PRIMARY KEY AUTO_INCREMENT,student_id BIGINT NOT NULL,knowledge_id BIGINT NOT NULL,event_type VARCHAR(64) NOT NULL,business_type VARCHAR(64),business_id BIGINT,score_before DECIMAL(5,2) NOT NULL,change_value DECIMAL(5,2) NOT NULL,score_after DECIMAL(5,2) NOT NULL,difficulty_factor DECIMAL(6,4),confidence DECIMAL(5,4),knowledge_weight DECIMAL(5,4),streak_adjustment DECIMAL(5,2),calculation_detail_json JSON,manual_flag TINYINT NOT NULL DEFAULT 0,remark TEXT,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),CONSTRAINT fk_mh_student FOREIGN KEY(student_id) REFERENCES student(id),CONSTRAINT fk_mh_kn FOREIGN KEY(knowledge_id) REFERENCES knowledge_node(id),INDEX idx_mh(student_id,knowledge_id,create_time)) ENGINE=InnoDB;
CREATE TABLE learning_resource(id BIGINT PRIMARY KEY AUTO_INCREMENT,resource_code VARCHAR(32) NOT NULL UNIQUE,title VARCHAR(255) NOT NULL,resource_type VARCHAR(32) NOT NULL,source_type VARCHAR(32) NOT NULL,source_url TEXT,subject_id BIGINT,duration_seconds INT,difficulty TINYINT,status VARCHAR(32) NOT NULL DEFAULT 'WAITING',description TEXT,tags VARCHAR(512),deleted TINYINT NOT NULL DEFAULT 0,version INT NOT NULL DEFAULT 0,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),CONSTRAINT fk_lr_subject FOREIGN KEY(subject_id) REFERENCES subject(id),CHECK(status IN('WAITING','LEARNING','COMPLETED','REVIEW','ARCHIVED')),INDEX idx_lr_filter(subject_id,resource_type,status,deleted)) ENGINE=InnoDB;
CREATE TABLE learning_resource_knowledge(resource_id BIGINT NOT NULL,knowledge_id BIGINT NOT NULL,PRIMARY KEY(resource_id,knowledge_id),CONSTRAINT fk_lrk_resource FOREIGN KEY(resource_id) REFERENCES learning_resource(id),CONSTRAINT fk_lrk_kn FOREIGN KEY(knowledge_id) REFERENCES knowledge_node(id)) ENGINE=InnoDB;
CREATE TABLE resource_history(id BIGINT PRIMARY KEY AUTO_INCREMENT,student_id BIGINT NOT NULL,resource_id BIGINT NOT NULL,start_time DATETIME(3),end_time DATETIME(3),duration_seconds INT NOT NULL DEFAULT 0,progress_percent DECIMAL(5,2) NOT NULL DEFAULT 0,completed TINYINT NOT NULL DEFAULT 0,note LONGTEXT,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),CONSTRAINT fk_rh_student FOREIGN KEY(student_id) REFERENCES student(id),CONSTRAINT fk_rh_resource FOREIGN KEY(resource_id) REFERENCES learning_resource(id),CHECK(progress_percent BETWEEN 0 AND 100)) ENGINE=InnoDB;
CREATE TABLE study_log(id BIGINT PRIMARY KEY AUTO_INCREMENT,student_id BIGINT NOT NULL,subject_id BIGINT,study_date DATE NOT NULL,duration_seconds INT NOT NULL DEFAULT 0,content TEXT,remark TEXT,deleted TINYINT NOT NULL DEFAULT 0,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),CONSTRAINT fk_sl_student FOREIGN KEY(student_id) REFERENCES student(id),CONSTRAINT fk_sl_subject FOREIGN KEY(subject_id) REFERENCES subject(id)) ENGINE=InnoDB;
CREATE TABLE growth_event(id BIGINT PRIMARY KEY AUTO_INCREMENT,student_id BIGINT NOT NULL,event_type VARCHAR(32) NOT NULL,title VARCHAR(255) NOT NULL,event_date DATE NOT NULL,description LONGTEXT,tags VARCHAR(512),deleted TINYINT NOT NULL DEFAULT 0,version INT NOT NULL DEFAULT 0,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),CONSTRAINT fk_ge_student FOREIGN KEY(student_id) REFERENCES student(id)) ENGINE=InnoDB;
CREATE TABLE ai_model(id BIGINT PRIMARY KEY AUTO_INCREMENT,name VARCHAR(128) NOT NULL,provider VARCHAR(32) NOT NULL,model_code VARCHAR(128) NOT NULL,api_base_url VARCHAR(512),api_key_ref VARCHAR(255),supports_vision TINYINT NOT NULL DEFAULT 0,supports_json TINYINT NOT NULL DEFAULT 1,local_flag TINYINT NOT NULL DEFAULT 0,enabled TINYINT NOT NULL DEFAULT 1,priority_no INT NOT NULL DEFAULT 100,timeout_seconds INT NOT NULL DEFAULT 120,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),UNIQUE KEY uk_ai_model(provider,model_code)) ENGINE=InnoDB;
CREATE TABLE prompt_template(id BIGINT PRIMARY KEY AUTO_INCREMENT,prompt_code VARCHAR(64) NOT NULL,name VARCHAR(128) NOT NULL,version_no INT NOT NULL,business_type VARCHAR(64) NOT NULL,system_prompt LONGTEXT,user_prompt_template LONGTEXT NOT NULL,output_schema JSON,status VARCHAR(32) NOT NULL DEFAULT 'DRAFT',create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),UNIQUE KEY uk_prompt(prompt_code,version_no)) ENGINE=InnoDB;
CREATE TABLE ai_analysis(id BIGINT PRIMARY KEY AUTO_INCREMENT,student_id BIGINT,business_type VARCHAR(64) NOT NULL,business_id BIGINT,ai_model_id BIGINT NOT NULL,prompt_template_id BIGINT,status VARCHAR(32) NOT NULL,input_summary LONGTEXT,result_json JSON,error_code VARCHAR(64),error_message TEXT,prompt_tokens INT,completion_tokens INT,duration_ms BIGINT,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),CONSTRAINT fk_aa_student FOREIGN KEY(student_id) REFERENCES student(id),CONSTRAINT fk_aa_model FOREIGN KEY(ai_model_id) REFERENCES ai_model(id),CONSTRAINT fk_aa_prompt FOREIGN KEY(prompt_template_id) REFERENCES prompt_template(id)) ENGINE=InnoDB;
CREATE TABLE attachment(id BIGINT PRIMARY KEY AUTO_INCREMENT,file_name VARCHAR(255) NOT NULL,storage_type VARCHAR(32) NOT NULL,storage_path VARCHAR(1024) NOT NULL,mime_type VARCHAR(128),file_size BIGINT NOT NULL,sha256 VARCHAR(64) NOT NULL,deleted TINYINT NOT NULL DEFAULT 0,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),INDEX idx_attachment_hash(sha256)) ENGINE=InnoDB;
CREATE TABLE ai_extraction_task(id BIGINT PRIMARY KEY AUTO_INCREMENT,task_code VARCHAR(64) NOT NULL UNIQUE,student_id BIGINT NOT NULL,subject_id BIGINT,grade_id BIGINT,source_type VARCHAR(32) NOT NULL,source_name VARCHAR(255),exam_id BIGINT,model_id BIGINT NOT NULL,prompt_template_id BIGINT,status VARCHAR(32) NOT NULL,progress_stage VARCHAR(64),progress_percent INT NOT NULL DEFAULT 0,input_type VARCHAR(32) NOT NULL,recognize_analysis TINYINT NOT NULL DEFAULT 0,match_knowledge TINYINT NOT NULL DEFAULT 1,mask_personal_info TINYINT NOT NULL DEFAULT 0,retry_count INT NOT NULL DEFAULT 0,max_retry_count INT NOT NULL DEFAULT 3,result_json JSON,error_code VARCHAR(64),error_message TEXT,started_time DATETIME(3),finished_time DATETIME(3),expire_time DATETIME(3),create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),CONSTRAINT fk_aet_student FOREIGN KEY(student_id) REFERENCES student(id),CONSTRAINT fk_aet_subject FOREIGN KEY(subject_id) REFERENCES subject(id),CONSTRAINT fk_aet_grade FOREIGN KEY(grade_id) REFERENCES grade(id),CONSTRAINT fk_aet_exam FOREIGN KEY(exam_id) REFERENCES exam(id),CONSTRAINT fk_aet_model FOREIGN KEY(model_id) REFERENCES ai_model(id),CONSTRAINT fk_aet_prompt FOREIGN KEY(prompt_template_id) REFERENCES prompt_template(id),CHECK(progress_percent BETWEEN 0 AND 100)) ENGINE=InnoDB;
CREATE TABLE ai_extraction_file(id BIGINT PRIMARY KEY AUTO_INCREMENT,task_id BIGINT NOT NULL,attachment_id BIGINT NOT NULL,page_no INT,sort_order INT NOT NULL DEFAULT 0,file_role VARCHAR(32) NOT NULL,image_width INT,image_height INT,preprocess_status VARCHAR(32),ocr_status VARCHAR(32),ocr_text LONGTEXT,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),CONSTRAINT fk_aef_task FOREIGN KEY(task_id) REFERENCES ai_extraction_task(id),CONSTRAINT fk_aef_attachment FOREIGN KEY(attachment_id) REFERENCES attachment(id)) ENGINE=InnoDB;
CREATE TABLE ai_extraction_question(id BIGINT PRIMARY KEY AUTO_INCREMENT,task_id BIGINT NOT NULL,sequence_no INT NOT NULL,page_no INT,question_no VARCHAR(64),question_type VARCHAR(32),question_text LONGTEXT NOT NULL,student_answer LONGTEXT,correct_answer LONGTEXT,answer_source VARCHAR(32),analysis_text LONGTEXT,analysis_source VARCHAR(32),error_type VARCHAR(32),difficulty TINYINT,confidence DECIMAL(5,4),status VARCHAR(32) NOT NULL DEFAULT 'PENDING_REVIEW',raw_json JSON,user_modified TINYINT NOT NULL DEFAULT 0,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),CONSTRAINT fk_aeq_task FOREIGN KEY(task_id) REFERENCES ai_extraction_task(id),UNIQUE KEY uk_aeq_task_seq(task_id,sequence_no)) ENGINE=InnoDB;
CREATE TABLE ai_extraction_question_knowledge(id BIGINT PRIMARY KEY AUTO_INCREMENT,extraction_question_id BIGINT NOT NULL,knowledge_id BIGINT,knowledge_code VARCHAR(64),knowledge_name VARCHAR(128),confidence DECIMAL(5,4),is_primary TINYINT NOT NULL DEFAULT 0,confirmed TINYINT NOT NULL DEFAULT 0,source VARCHAR(16) NOT NULL DEFAULT 'AI',create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),CONSTRAINT fk_aeqk_question FOREIGN KEY(extraction_question_id) REFERENCES ai_extraction_question(id),CONSTRAINT fk_aeqk_kn FOREIGN KEY(knowledge_id) REFERENCES knowledge_node(id)) ENGINE=InnoDB;
CREATE TABLE ai_extraction_correction(id BIGINT PRIMARY KEY AUTO_INCREMENT,task_id BIGINT NOT NULL,question_id BIGINT NOT NULL,field_name VARCHAR(64) NOT NULL,original_value LONGTEXT,corrected_value LONGTEXT,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),CONSTRAINT fk_aec_task FOREIGN KEY(task_id) REFERENCES ai_extraction_task(id),CONSTRAINT fk_aec_question FOREIGN KEY(question_id) REFERENCES ai_extraction_question(id)) ENGINE=InnoDB;
CREATE TABLE study_plan(id BIGINT PRIMARY KEY AUTO_INCREMENT,student_id BIGINT NOT NULL,title VARCHAR(255) NOT NULL,plan_type VARCHAR(32) NOT NULL,start_date DATE NOT NULL,end_date DATE NOT NULL,status VARCHAR(32) NOT NULL DEFAULT 'DRAFT',source_analysis_id BIGINT,daily_available_minutes INT,description TEXT,deleted TINYINT NOT NULL DEFAULT 0,version INT NOT NULL DEFAULT 1,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),CONSTRAINT fk_sp_student FOREIGN KEY(student_id) REFERENCES student(id),CONSTRAINT fk_sp_analysis FOREIGN KEY(source_analysis_id) REFERENCES ai_analysis(id)) ENGINE=InnoDB;
CREATE TABLE study_plan_task(id BIGINT PRIMARY KEY AUTO_INCREMENT,study_plan_id BIGINT NOT NULL,task_date DATE NOT NULL,task_type VARCHAR(32) NOT NULL,title VARCHAR(255) NOT NULL,resource_id BIGINT,wrong_question_id BIGINT,knowledge_id BIGINT,expected_duration_seconds INT,status VARCHAR(32) NOT NULL DEFAULT 'TODO',completed_time DATETIME(3),sort_order INT NOT NULL DEFAULT 0,remark TEXT,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),CONSTRAINT fk_spt_plan FOREIGN KEY(study_plan_id) REFERENCES study_plan(id),CONSTRAINT fk_spt_resource FOREIGN KEY(resource_id) REFERENCES learning_resource(id),CONSTRAINT fk_spt_wq FOREIGN KEY(wrong_question_id) REFERENCES wrong_question(id),CONSTRAINT fk_spt_kn FOREIGN KEY(knowledge_id) REFERENCES knowledge_node(id)) ENGINE=InnoDB;
CREATE TABLE recommendation(id BIGINT PRIMARY KEY AUTO_INCREMENT,student_id BIGINT NOT NULL,recommendation_type VARCHAR(32) NOT NULL,target_type VARCHAR(32) NOT NULL,target_id BIGINT,reason TEXT NOT NULL,score DECIMAL(7,4),status VARCHAR(32) NOT NULL DEFAULT 'ACTIVE',source_analysis_id BIGINT,expire_time DATETIME(3),create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),CONSTRAINT fk_rec_student FOREIGN KEY(student_id) REFERENCES student(id),CONSTRAINT fk_rec_analysis FOREIGN KEY(source_analysis_id) REFERENCES ai_analysis(id)) ENGINE=InnoDB;
CREATE TABLE growth_report(id BIGINT PRIMARY KEY AUTO_INCREMENT,student_id BIGINT NOT NULL,report_type VARCHAR(32) NOT NULL,title VARCHAR(255) NOT NULL,start_date DATE NOT NULL,end_date DATE NOT NULL,generation_type VARCHAR(32) NOT NULL,status VARCHAR(32) NOT NULL DEFAULT 'PENDING',statistics_snapshot_json JSON,ai_analysis_id BIGINT,content_markdown LONGTEXT,deleted TINYINT NOT NULL DEFAULT 0,version INT NOT NULL DEFAULT 1,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),CONSTRAINT fk_gr_student FOREIGN KEY(student_id) REFERENCES student(id),CONSTRAINT fk_gr_analysis FOREIGN KEY(ai_analysis_id) REFERENCES ai_analysis(id)) ENGINE=InnoDB;
CREATE TABLE entity_attachment(id BIGINT PRIMARY KEY AUTO_INCREMENT,entity_type VARCHAR(64) NOT NULL,entity_id BIGINT NOT NULL,attachment_id BIGINT NOT NULL,attachment_role VARCHAR(32),sort_order INT NOT NULL DEFAULT 0,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),CONSTRAINT fk_ea_attachment FOREIGN KEY(attachment_id) REFERENCES attachment(id),UNIQUE KEY uk_ea(entity_type,entity_id,attachment_id,attachment_role)) ENGINE=InnoDB;
CREATE TABLE import_task(id BIGINT PRIMARY KEY AUTO_INCREMENT,task_code VARCHAR(64) NOT NULL UNIQUE,import_type VARCHAR(32) NOT NULL,status VARCHAR(32) NOT NULL,attachment_id BIGINT,total_rows INT NOT NULL DEFAULT 0,valid_rows INT NOT NULL DEFAULT 0,invalid_rows INT NOT NULL DEFAULT 0,preview_json JSON,error_report_attachment_id BIGINT,idempotency_key VARCHAR(64),expire_time DATETIME(3),create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),CONSTRAINT fk_it_attachment FOREIGN KEY(attachment_id) REFERENCES attachment(id),CONSTRAINT fk_it_error_attachment FOREIGN KEY(error_report_attachment_id) REFERENCES attachment(id),UNIQUE KEY uk_it_idempotency(idempotency_key)) ENGINE=InnoDB;
CREATE TABLE export_task(id BIGINT PRIMARY KEY AUTO_INCREMENT,task_code VARCHAR(64) NOT NULL UNIQUE,student_id BIGINT,export_types_json JSON NOT NULL,export_format VARCHAR(16) NOT NULL,status VARCHAR(32) NOT NULL,filter_json JSON,include_attachments TINYINT NOT NULL DEFAULT 0,include_deleted TINYINT NOT NULL DEFAULT 0,output_attachment_id BIGINT,error_message TEXT,expire_time DATETIME(3),create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),CONSTRAINT fk_et_student FOREIGN KEY(student_id) REFERENCES student(id),CONSTRAINT fk_et_output FOREIGN KEY(output_attachment_id) REFERENCES attachment(id)) ENGINE=InnoDB;
CREATE TABLE backup_record(id BIGINT PRIMARY KEY AUTO_INCREMENT,backup_code VARCHAR(64) NOT NULL UNIQUE,backup_type VARCHAR(32) NOT NULL,status VARCHAR(32) NOT NULL,file_name VARCHAR(255),storage_path VARCHAR(1024),file_size BIGINT,checksum VARCHAR(128),system_version VARCHAR(64),remark VARCHAR(512),error_message TEXT,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),finish_time DATETIME(3)) ENGINE=InnoDB;
CREATE TABLE restore_record(id BIGINT PRIMARY KEY AUTO_INCREMENT,restore_code VARCHAR(64) NOT NULL UNIQUE,backup_id BIGINT NOT NULL,status VARCHAR(32) NOT NULL,progress_stage VARCHAR(64),progress_percent INT NOT NULL DEFAULT 0,pre_restore_backup_id BIGINT,error_message TEXT,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),finish_time DATETIME(3),CONSTRAINT fk_rr_backup FOREIGN KEY(backup_id) REFERENCES backup_record(id),CONSTRAINT fk_rr_pre_backup FOREIGN KEY(pre_restore_backup_id) REFERENCES backup_record(id),CHECK(progress_percent BETWEEN 0 AND 100)) ENGINE=InnoDB;
CREATE TABLE system_config(id BIGINT PRIMARY KEY AUTO_INCREMENT,config_key VARCHAR(128) NOT NULL UNIQUE,config_value LONGTEXT,value_type VARCHAR(32) NOT NULL DEFAULT 'STRING',secret_flag TINYINT NOT NULL DEFAULT 0,description VARCHAR(512),update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3)) ENGINE=InnoDB;
CREATE TABLE operation_log(id BIGINT PRIMARY KEY AUTO_INCREMENT,operation_type VARCHAR(64) NOT NULL,module_name VARCHAR(64) NOT NULL,target_type VARCHAR(64),target_id BIGINT,request_id VARCHAR(64),detail_json JSON,success_flag TINYINT NOT NULL DEFAULT 1,error_message TEXT,create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),INDEX idx_ol_module_time(module_name,create_time),INDEX idx_ol_target(target_type,target_id)) ENGINE=InnoDB;
SET FOREIGN_KEY_CHECKS=1;
